# Bank-Wire-Transfer-Simulator

./: CMakeLists.txt  README.md  bank.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
